# merecat

./: .gitignore  .travis.yml  ChangeLog.md  Dockerfile  LICENSE  Makefile.am  Makefile.in  README  README.md  TODO  autogen.sh  build.sh  configure.ac  configure.in  libhttpd.c  man.sh  merecat.conf  merecat.conf.sample  merecat.service.in  placeholder.text  preview.sh  run.sh  throttle.conf  thttpd.c
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml  container.yml  coverity.yml  deb.yml  release.yml
cgi-src/: Makefile.am  Makefile.in
debian/: .gitignore  changelog  control  copyright  docs  merecat.examples  rules
doc/: TODO  cgi.txt
docs/: Makefile.am  README.thttpd  TODO  cgi.txt  merecat.8  thttpd.8
extras/: Makefile.am  Makefile.in  htpasswd.c  makeweb.c  syslogtocern
lib/: lstat.c  realloc.c  tempfile.c
man/: Makefile.am  htpasswd.1  merecat.8  merecat.conf.5  redirect.8  ssi.8
scripts/: 500.merecat-rotate  Makefile.am  merecat.sh  merecat_wrapper
src/: .gitignore  Makefile.am  base64.c  base64.h  conf.c  conf.h  fdwatch.c  fdwatch.h  file.c  file.h  htpasswd.c  libhttpd.c  libhttpd.h  make_mime.pl  match.c  match.h  md5.c  md5.h  merecat.c  merecat.h  mime_encodings.h  mime_encodings.txt  mime_types.h  mime_types.txt  mmc.c  mmc.h  pidfile.c  srv.c  srv.h  ssl.c  ssl.h  stack.c  strerror.c  tdate_parse.c  tdate_parse.h  thttpd.c  thttpd.h  timers.c  timers.h  version.h
tests/: .gitignore  Makefile.am  cgi.sh  dirlisting.sh  gzip.sh  htaccess.sh  htpasswd.sh  index-order.sh  location.sh  merecat.conf  php.sh  proxy.sh  redirect.sh  setenv.sh  ssi.sh  start.sh  stop.sh
www/: Makefile.am  footer.html  header.html  htpasswd.1.html  index.html  main.css  merecat.8.html  merecat.conf.5.html  redirect.8.html  ssi.8.html  test.php
www/cgi-bin/: .gitignore  Makefile.am  onboard.py  phf.c  printenv  redirect.c  ssi.c
www/icons/: Makefile.am
www/img/: Makefile.am
www/onboard/: Makefile.am  form.html
www/onboard/file/: FYI.text
