EXTRA_DIST       = merecat.conf start.sh stop.sh
EXTRA_DIST      += cgi.sh gzip.sh redirect.sh location.sh
CLEANFILES       = *~ *.trs *.log
TEST_EXTENSIONS  = .sh

TESTS            = start.sh
TESTS           += cgi.sh
TESTS           += gzip.sh
TESTS           += redirect.sh
TESTS           += location.sh
TESTS           += stop.sh
