EXTRA_DIST       = merecat.conf start.sh stop.sh
EXTRA_DIST      += cgi.sh gzip.sh redirect.sh location.sh php.sh proxy.sh setenv.sh
EXTRA_DIST      += dirlisting.sh htpasswd.sh htaccess.sh ssi.sh index-order.sh
CLEANFILES       = *~ *.trs *.log
TEST_EXTENSIONS  = .sh

TESTS            = start.sh
TESTS           += cgi.sh
TESTS           += setenv.sh
TESTS           += php.sh
TESTS           += gzip.sh
TESTS           += redirect.sh
TESTS           += location.sh
TESTS           += proxy.sh
TESTS           += dirlisting.sh
TESTS           += htpasswd.sh
TESTS           += htaccess.sh
TESTS           += ssi.sh
TESTS           += index-order.sh
TESTS           += stop.sh
